--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,12 +1,16 @@
 html {
-  font-family: "Droid Sans";
+  font-family: "soleil", sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "soleil", sans-serif;
+  background-image: url("data:image/svg+xml,%3Csvg%20width%3D%2230%22%20height%3D%2230%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20fill%3D%22%23fff%22%20d%3D%22M0%200h30v30H0z%22%2F%3E%3Ccircle%20cx%3D%2215%22%20cy%3D%2214%22%20r%3D%221%22%20fill%3D%22%23A0AEC0%22%2F%3E%3C%2Fsvg%3E");
 }
 article,
 aside,
@@ -185,7 +189,7 @@ textarea {
   font: inherit;
 }
 html {
-  font: 112.5%/1.45em georgia, serif;
+  font-size: 1rem;
   box-sizing: border-box;
   overflow-y: scroll;
 }
@@ -200,7 +204,7 @@ html {
 }
 body {
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: georgia, serif;
+  font-family: "soleil", sans-serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
